--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
-    "yup": "^1.4.0",
-    "yup-password": "^0.2.2",
+    "react-input-mask": "^2.0.4",
     "react-scroll": "^1.8.9",
-    "react-input-mask": "^2.0.4"
+    "react-select": "^5.8.0",
+    "yup": "^1.4.0",
+    "yup-password": "^0.2.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
