--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.3.0",
     "mongoose": "^8.3.3",
     "next": "14.2.2",
     "nodemailer": "^6.9.13",
