--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@hotjar/browser": "^1.0.9",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
