--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
+    "react-hotjar": "^6.3.1",
     "react-icons": "^5.2.1",
     "react-input-mask": "^2.0.4",
     "react-scroll": "^1.8.9",
